Fixed test build.

--- a/FileSystemLinks.Tests/FileSystemLinks.Tests.csproj
+++ b/FileSystemLinks.Tests/FileSystemLinks.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net8.0</TargetFrameworks>
-    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or $(IsMonoInstalled)">$(TargetFrameworks);net472</TargetFrameworks>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(IsMonoInstalled)' == 'true'">$(TargetFrameworks);net472</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
